--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.4.1",
     "babel-node-modules": "0.0.1",
+    "babel-plugin-root-import": "^5.1.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
