--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-standard": "^2.0.0",
     "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
+    "netlify-lambda": "^1.0.0-babel-7-beta",
     "style-loader": "^0.13.1",
     "truffle": "^4.0.6",
     "truffle-contract": "^1.1.11",
