--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-loader": "^8.0.0-beta.0",
     "babel-node-modules": "0.0.1",
     "babel-plugin-root-import": "^5.1.0",
+    "commonjs": "0.0.1",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.26.1",
     "eslint": "^3.14.0",
@@ -33,8 +34,9 @@
     "eslint-plugin-standard": "^2.0.0",
     "json-loader": "^0.5.4",
     "netlify-lambda": "^1.0.0-babel-7-beta",
-    "schema-utils": "^0.4.5",
+    "node-loader": "^0.6.0",
     "raw-loader": "^0.5.1",
+    "schema-utils": "^0.4.5",
     "style-loader": "^0.13.1",
     "truffle": "^4.0.6",
     "truffle-contract": "^1.1.11",
@@ -56,6 +58,9 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "request": "^2.85.0",
+    "sharp": "^0.20.1",
+    "tmp": "0.0.33",
     "truffle-hdwallet-provider": "0.0.3",
     "zeppelin-solidity": "^1.6.0"
   }
