--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-mocha": "^4.8.0",
     "eslint-plugin-promise": "^3.0.0",
     "eslint-plugin-standard": "^2.0.0",
+    "jimp": "^0.2.28",
     "json-loader": "^0.5.4",
     "netlify-lambda": "^1.0.0-babel-7-beta",
     "node-loader": "^0.6.0",
@@ -59,7 +60,6 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "request": "^2.85.0",
-    "sharp": "^0.20.1",
     "tmp": "0.0.33",
     "truffle-hdwallet-provider": "0.0.3",
     "zeppelin-solidity": "^1.6.0"
