--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "lint": "eslint ./",
     "build": "webpack --mode production --config webpack.prod.js",
-    "dev": "webpack-dev-server --config webpack.dev.js --mode development"
+    "dev": "webpack-dev-server --config webpack.dev.js --mode development",
+    "test": "babel-node spec/support/run.js"
   },
   "author": "Douglas von Kohorn",
   "license": "MIT",
   "devDependencies": {
     "@babel/cli": "7.0.0-beta.40",
     "@babel/core": "7.0.0-beta.40",
+    "@babel/node": "^7.0.0-beta.44",
     "@babel/plugin-transform-runtime": "7.0.0-beta.40",
     "@babel/polyfill": "7.0.0-beta.40",
     "@babel/preset-env": "7.0.0-beta.40",
@@ -32,6 +34,7 @@
     "eslint-plugin-mocha": "^4.8.0",
     "eslint-plugin-promise": "^3.0.0",
     "eslint-plugin-standard": "^2.0.0",
+    "jasmine": "^3.1.0",
     "jimp": "^0.2.28",
     "json-loader": "^0.5.4",
     "netlify-lambda": "^1.0.0-babel-7-beta",
