Removed dependency on zeppelin-solidity

--- a/package.json
+++ b/package.json
@@ -11,19 +11,18 @@
   "author": "Douglas von Kohorn",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "7.0.0-beta.40",
-    "@babel/core": "7.0.0-beta.40",
+    "@babel/cli": "7.0.0-beta.44",
+    "@babel/core": "^7.0.0-beta.44",
     "@babel/node": "^7.0.0-beta.44",
-    "@babel/plugin-transform-runtime": "7.0.0-beta.40",
-    "@babel/polyfill": "7.0.0-beta.40",
-    "@babel/preset-env": "7.0.0-beta.40",
-    "@babel/preset-react": "7.0.0-beta.40",
-    "@babel/preset-stage-2": "7.0.0-beta.40",
-    "@babel/preset-stage-3": "7.0.0-beta.40",
-    "@babel/register": "7.0.0-beta.40",
+    "@babel/plugin-transform-runtime": "7.0.0-beta.44",
+    "@babel/polyfill": "7.0.0-beta.44",
+    "@babel/preset-env": "7.0.0-beta.44",
+    "@babel/preset-react": "7.0.0-beta.44",
+    "@babel/preset-stage-2": "7.0.0-beta.44",
+    "@babel/preset-stage-3": "7.0.0-beta.44",
+    "@babel/register": "7.0.0-beta.44",
     "babel-eslint": "^8.2.2",
     "babel-loader": "^8.0.0-beta.0",
-    "babel-node-modules": "0.0.1",
     "babel-plugin-root-import": "^5.1.0",
     "commonjs": "0.0.1",
     "copy-webpack-plugin": "^4.5.1",
@@ -44,6 +43,7 @@
     "style-loader": "^0.13.1",
     "truffle": "^4.0.6",
     "truffle-contract": "^1.1.11",
+    "truffle-migrate-off-chain": "^0.1.1",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "web3": "^0.20.0",
     "webpack": "^4.3.0",
@@ -64,7 +64,6 @@
     "redux": "^3.7.2",
     "request": "^2.85.0",
     "tmp": "0.0.33",
-    "truffle-hdwallet-provider": "0.0.3",
-    "zeppelin-solidity": "^1.6.0"
+    "truffle-hdwallet-provider": "0.0.3"
   }
 }
