* update some stuff to Ivy * get some basic css animations in and the dir structure for it

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CryptoTrophies",
+  "name": "Ivy -- Awards on the Blockchain",
   "version": "0.0.1",
   "description": "Gift-giving on the Ethereum blockchain",
   "scripts": {
