Stripped down bloated lodash libary and integrated basic QR code reading

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Ivy -- Awards on the Blockchain",
+  "name": "ivy-awards",
   "version": "0.0.1",
-  "description": "Gift-giving on the Ethereum blockchain",
+  "description": "Awards on the Ethereum blockchain",
   "scripts": {
     "lint": "eslint ./",
     "build": "webpack --mode production --config webpack.prod.js",
@@ -36,6 +36,9 @@
     "jasmine": "^3.1.0",
     "jimp": "^0.2.28",
     "json-loader": "^0.5.4",
+    "jsqr": "^1.0.4",
+    "lodash.get": "^4.4.2",
+    "lodash.range": "^3.2.0",
     "netlify-lambda": "^1.0.0-babel-7-beta",
     "node-loader": "^0.6.0",
     "raw-loader": "^0.5.1",
@@ -46,6 +49,7 @@
     "uglifyjs-webpack-plugin": "^1.2.4",
     "web3": "^0.20.0",
     "webpack": "^4.3.0",
+    "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1",
     "webpack-merge": "^4.1.2"
@@ -54,12 +58,13 @@
     "bulma": "^0.6.2",
     "classnames": "^2.2.5",
     "immutability-helper": "^2.6.4",
-    "lodash": "^4.17.5",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-mixin": "^2.0.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-timer-mixin": "^0.13.3",
     "redux": "^3.7.2",
     "request": "^2.85.0",
     "tmp": "0.0.33",
