--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-fontawesome": "^1.6.1",
     "react-mixin": "^2.0.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
