--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "lodash.range": "^3.2.0",
     "netlify-lambda": "^1.0.0-babel-7-beta",
     "node-loader": "^0.6.0",
+    "node-sass": "^4.8.3",
     "raw-loader": "^0.5.1",
+    "sass-loader": "^7.0.1",
     "schema-utils": "^0.4.5",
     "style-loader": "^0.13.1",
     "truffle": "^4.0.6",
