--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-mocha": "^4.8.0",
     "eslint-plugin-promise": "^3.0.0",
     "eslint-plugin-standard": "^2.0.0",
+    "file-loader": "^1.1.11",
     "jasmine": "^3.1.0",
     "jimp": "^0.2.28",
     "json-loader": "^0.5.4",
