--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "truffle": "^4.0.6",
     "truffle-contract": "^1.1.11",
     "truffle-deployer": "^2.0.4",
+    "truffle-migrate-off-chain": "^0.1.3",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "web3": "^0.20.0",
     "webpack": "^4.3.0",
