--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1",
-    "webpack-merge": "^4.1.2"
+    "webpack-merge": "^4.1.2",
+    "zeppelin-solidity": "1.9.0"
   },
   "dependencies": {
     "bulma": "^0.6.2",
