--- a/package.json
+++ b/package.json
@@ -34,13 +34,14 @@
     "eslint-plugin-mocha": "^4.8.0",
     "eslint-plugin-promise": "^3.0.0",
     "eslint-plugin-standard": "^2.0.0",
+    "eth-gas-reporter": "^0.1.2",
     "file-loader": "^1.1.11",
-    "jasmine": "^3.1.0",
     "jimp": "^0.2.28",
     "json-loader": "^0.5.4",
     "jsqr": "^1.0.4",
     "lodash.get": "^4.4.2",
     "lodash.range": "^3.2.0",
+    "mocha": "^5.1.1",
     "netlify-lambda": "^1.0.0-babel-7-beta",
     "node-loader": "^0.6.0",
     "node-sass": "^4.8.3",
@@ -48,10 +49,9 @@
     "sass-loader": "^7.0.1",
     "schema-utils": "^0.4.5",
     "style-loader": "^0.13.1",
-    "truffle": "^4.0.6",
+    "truffle": "^4.1.7",
     "truffle-contract": "^1.1.11",
     "truffle-deployer": "^2.0.4",
-    "truffle-migrate-off-chain": "^0.1.3",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "web3": "^0.20.0",
     "webpack": "^4.3.0",
