--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     docker:
       # specify the version you desire here
       - image: circleci/node:7.10
-      
+
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
@@ -32,12 +32,15 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-        
+
       # run tests!
       - run:
-              - ./ganache.sh &
-              - truffle test
-              - kill %-
+        name: Starting Ganache
+        shell: /bin/sh
+        command: ./ganache.sh
+        background: true
 
-
-
+      - run:
+        name: Running Truffle Tests
+        shell: /bin/sh
+        command: truffle test
