--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "truffle": "^4.1.7",
     "truffle-contract": "^1.1.11",
     "truffle-deployer": "^2.0.4",
+    "truffle-migrate-off-chain": "^0.1.4",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "web3": "^0.20.0",
     "webpack": "^4.3.0",
