--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,7 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
+      - run: npm install -g ganache-cli
       - run: npm install
 
       - save_cache:
@@ -43,4 +44,4 @@ jobs:
       - run:
           name: Running Truffle Tests
           shell: /bin/sh
-          command: truffle test
+          command: node node_modules/truffle/build/cli.bundled.js test
