--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,8 +26,8 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: npm install -g ganache-cli
       - run: npm install
+      - run: npm install ganache-cli
 
       - save_cache:
           paths:
