--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-standard": "^2.0.0",
     "eth-gas-reporter": "^0.1.2",
     "file-loader": "^1.1.11",
+    "ganache-cli": "^6.1.0",
     "jimp": "^0.2.28",
     "json-loader": "^0.5.4",
     "jsqr": "^1.0.4",
