--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,6 @@ jobs:
           - v1-dependencies-
 
       - run: npm install
-      - run: npm install ganache-cli
 
       - save_cache:
           paths:
@@ -38,7 +37,4 @@ jobs:
       - run:
           name: Run tests
           shell: /bin/sh
-          command: |
-            ./ganache.sh > /dev/null &
-            $(npm bin)/truffle test
-            kill %-
+          command: $(npm bin)/truffle test
