--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,12 +36,8 @@ jobs:
       # run tests!
 
       - run:
-          name: start ganache
-          shell: /bin/sh
-          command: ./ganache.sh
-          background: true
-
-      - run:
           name: Run tests
           shell: /bin/sh
-          command: $(npm bin)/truffle test
+          command: |
+            ./ganache.sh > /dev/null &
+            $(npm bin)/truffle test
