--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,5 +39,5 @@ jobs:
           name: Run tests
           shell: /bin/sh
           command: |
-            ./ganache.sh > /dev/null &
+            ./ganache.sh &
             $(npm bin)/truffle test
