--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,8 +37,12 @@ jobs:
       # run tests!
 
       - run:
+          name: Run Ganache
+          shell: /bin/sh
+          command: ./ganache.sh
+          background: true
+
+      - run:
           name: Run tests
           shell: /bin/sh
-          command: |
-            ./ganache.sh &
-            $(npm bin)/truffle test
+          command: $(npm bin)/truffle test
