--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "eslint ./",
     "build": "webpack --mode production --config webpack.prod.js",
     "dev": "webpack-dev-server --config webpack.dev.js --mode development",
-    "test": "babel-node spec/support/run.js"
+    "test": "truffle test",
+    "test-app": "mocha --require @babel/register test-app"
   },
   "author": "Brendan Asselstine, Chuck Bergeron",
   "license": "MIT",
@@ -21,7 +22,7 @@
     "@babel/preset-react": "7.0.0-beta.44",
     "@babel/preset-stage-2": "7.0.0-beta.44",
     "@babel/preset-stage-3": "7.0.0-beta.44",
-    "@babel/register": "7.0.0-beta.44",
+    "@babel/register": "^7.0.0-beta.44",
     "babel-eslint": "^8.2.2",
     "babel-loader": "^8.0.0-beta.0",
     "babel-plugin-root-import": "^5.1.0",
