--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
     "@babel/preset-react"
   ],
   "plugins": [
+    ["transform-class-properties", { "spec": true }],
     [
       "babel-plugin-root-import",
       {
