* in the midst of wrangling our animation stuff

--- a/package.json
+++ b/package.json
@@ -68,17 +68,19 @@
     "zeppelin-solidity": "1.9.0"
   },
   "dependencies": {
+    "animejs": "^2.2.0",
     "bulma": "^0.6.2",
     "classnames": "^2.2.5",
     "immutability-helper": "^2.6.4",
     "prop-types": "^15.6.0",
-    "react": "^16.2.0",
+    "react": "^16.3.0",
     "react-dom": "^16.2.0",
     "react-fontawesome": "^1.6.1",
     "react-mixin": "^2.0.2",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-timer-mixin": "^0.13.3",
+    "react-transition-group": "^2.3.1",
     "redux": "^3.7.2",
     "request": "^2.85.0",
     "tmp": "0.0.33",
