--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,10 @@
     "@babel/preset-react"
   ],
   "plugins": [
-    ["transform-class-properties", { "spec": true }],
+    [
+      "transform-class-properties",
+      { "spec": true }
+    ],
     [
       "babel-plugin-root-import",
       {
