--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "description": "Awards on the Ethereum blockchain",
   "scripts": {
-    "lint": "eslint ./",
+    "lint": "eslint app",
     "build": "webpack --mode production --config webpack.prod.js",
     "dev": "webpack-dev-server --config webpack.dev.js --mode development",
     "test": "truffle test",
@@ -24,11 +24,16 @@
     "@babel/preset-stage-3": "7.0.0-beta.44",
     "@babel/register": "^7.0.0-beta.44",
     "babel-eslint": "^8.2.2",
+    "babel-jest": "^23.0.0",
     "babel-loader": "^8.0.0-beta.0",
     "babel-plugin-root-import": "^5.1.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "commonjs": "0.0.1",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.26.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.4",
     "eslint": "^3.14.0",
     "eslint-config-standard": "^6.0.0",
     "eslint-plugin-babel": "^4.1.2",
@@ -38,7 +43,10 @@
     "eth-gas-reporter": "^0.1.2",
     "file-loader": "^1.1.11",
     "ganache-cli": "^6.1.0",
+    "jest": "^23.0.0",
     "jimp": "^0.2.28",
+    "jsdom": "^11.10.0",
+    "jsdom-global": "^3.0.2",
     "json-loader": "^0.5.4",
     "jsqr": "^1.0.4",
     "lodash.get": "^4.4.2",
@@ -49,41 +57,47 @@
     "node-sass": "^4.8.3",
     "raw-loader": "^0.5.1",
     "react-error-overlay": "^4.0.0",
+    "react-test-renderer": "^16.4.0",
     "sass-loader": "^7.0.1",
     "schema-utils": "^0.4.5",
     "scrypt": "^6.0.3",
-    "style-loader": "^0.13.1",
-    "truffle": "^4.1.7",
+    "style-loader": "^0.21.0",
+    "truffle": "^4.1.8",
     "truffle-contract": "^1.1.11",
     "truffle-deployer": "^2.0.4",
     "truffle-migrate-off-chain": "^0.1.4",
     "uglifyjs-webpack-plugin": "^1.2.4",
     "vanilla-tilt": "^1.4.1",
-    "web3": "^0.20.0",
-    "webpack": "^4.6.0",
+    "web3": "^0.20.6",
+    "webpack": "^4.8.1",
     "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-cli": "^2.0.13",
-    "webpack-dev-server": "^3.1.1",
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2",
     "zeppelin-solidity": "1.9.0"
   },
   "dependencies": {
-    "bulma": "^0.6.2",
+    "bignumber.js": "^7.0.1",
+    "bulma": "^0.7.1",
     "classnames": "^2.2.5",
+    "ethereumjs-abi": "^0.6.5",
     "immutability-helper": "^2.6.4",
+    "install": "^0.11.0",
     "prop-types": "^15.6.0",
-    "react": "^16.3.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.3.2",
+    "react-dom": "^16.2.2",
     "react-fontawesome": "^1.6.1",
     "react-mixin": "^2.0.2",
     "react-redux": "^5.0.6",
+    "react-redux-toastr": "^7.2.6",
     "react-router-dom": "^4.2.2",
     "react-timer-mixin": "^0.13.3",
     "react-tippy": "^1.2.2",
     "react-transition-group": "^2.3.1",
-    "redux": "^3.7.2",
+    "redux": "^4.0.0",
     "request": "^2.85.0",
     "tmp": "0.0.33",
-    "truffle-hdwallet-provider": "0.0.3"
+    "truffle-hdwallet-provider": "0.0.3",
+    "web3-redux": "^0.5.2"
   }
 }
